# cryoem-lattice-subtraction

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTES_RD_MEETING.md  README.md  analyze_thresholds.py  environment.yml  pyproject.toml  simulate_motion_correction.py  slack_announcement.txt
docs/: architecture.md
examples/: config.yaml  converted_params.yaml
src/lattice_subtraction/: __init__.py  batch.py  cli.py  config.py  core.py  io.py  masks.py  processing.py  threshold_optimizer.py  ui.py  visualization.py  watch.py
tests/: test_lattice_subtraction.py
