[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-sub"
version = "1.4.2"
description = "Lattice subtraction for cryo-EM micrographs - removes periodic crystal signals to reveal non-periodic features"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "George Stephenson", email = "george.stephenson@colorado.edu"},
    {name = "Vignesh Kasinath", email = "vignesh.kasinath@colorado.edu"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
keywords = ["cryo-em", "electron-microscopy", "lattice-subtraction", "image-processing", "fft"]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "mrcfile>=1.4",
    "pyyaml>=6.0",
    "tqdm>=4.65",
    "click>=8.1",
    "scikit-image>=0.21",
    "torch>=2.0",
    "matplotlib>=3.7",
    "kornia>=0.7",
    "watchdog>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov", "black", "ruff", "mypy"]
viz = ["matplotlib>=3.7"]

[project.scripts]
lattice-sub = "lattice_subtraction.cli:main"

[project.urls]
Homepage = "https://github.com/gsstephenson/cryoem-lattice-subtraction"
Documentation = "https://github.com/gsstephenson/cryoem-lattice-subtraction#readme"
Repository = "https://github.com/gsstephenson/cryoem-lattice-subtraction"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
# Exclude internal notes and dev files from distribution
exclude-package-data = {"*" = ["NOTES_*.md", "*.log", "*.sbatch"]}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
